Adding Freelancer 1.0.5 template

--- a/startbootstrap-freelancer-1.0.5/index.html
+++ b/startbootstrap-freelancer-1.0.5/index.html
@@ -59,9 +59,6 @@
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">Start Bootstrap</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Software Engineer - Web Developer - Full Stack</span>
                     </div>
                 </div>
             </div>
