--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">About</a>
+                        <a href="#contact">Contact/a>
                     </li>
                 </ul>
             </div>
@@ -246,7 +246,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>Anchorage, AK 99504</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
