--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -174,6 +174,7 @@
                 </div>
                 <div class="col-lg-4">
                     <p>FOR FUN: I enjoy reading, origami, chess, video and board games, cooking, trying something new or relaxing.</p>
+                    <p><i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>You can feel sore tomorrow or you can feel sorry tomorrow. You choose. - Anonymous</p>
                 </div>
                 <!--<div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -252,19 +253,19 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://github.com/mfry" class="btn-social btn-outline"><i class="fa fa-github-alt"></i></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="http://stackoverflow.com/users/1771644/michal-frystacky?tab=profile" class="btn-social btn-outline"><i class="fa fa-stack-overflow"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="http://www.freecodecamp.com/mfry" class="btn-social btn-outline"><img src="img/fcc-app-icon.png"></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/michalfrystacky" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://plus.google.com/u/0/+MichalFrystacky" class="btn-social btn-outline"><i class="fa fa-google-plus"></i></a>
                             </li>
                         </ul>
                     </div>
