Adding favicon asset and minor grammar change

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="col-lg-4 col-lg-offset-2">
 
                     <p>BY DAY: Programmer and web developer BY NIGHT: You can find me learning and pushing code to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar fun activities. (Speaking of...)</p>
-                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i>Python (I love this language), Java, HTML/CSS/Javascript SQL (Postgresql specifically)
+                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> (I love this language), <code>Java</code>, <code>HTML</code>/<code>CSS</code>/<code>Javascript</code>, <code>SQL</code> (Postgresql specifically)
                 </div>
                 <div class="col-lg-4">
                     <p>FOR FUN: I enjoy reading, origami, chess, video and board games, cooking, trying something new or relaxing.</p>
