reformated about me

--- a/index.html
+++ b/index.html
@@ -171,13 +171,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-
-                    <p>BY DAY: Programmer and web developer BY NIGHT: You can find me learning and pushing code to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar fun activities. (Speaking of...)</p>
                     <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> (My Love), <code>Java</code>, <code>HTML</code>/<code>CSS</code>/<code>Javascript</code>, <code>SQL</code> (Postgresql)
+                    <p>BY DAY: Professional programmer and web developer (...)</p>
+
                 </div>
-                <div class="col-lg-4">
-                    <p>FOR FUN: I enjoy reading, origami, chess, video and board games, cooking, trying something new or relaxing.</p>
+                <p class="col-lg-4">
+                    BY NIGHT: You can find me learning and pushing code to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar fun activities.
                     <p><i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>You can feel sore tomorrow or you can feel sorry tomorrow. You choose. - Anonymous</p>
+                </p>
                 </div>
                 <!--<div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
