Stylized and added additional information in the about section.

--- a/index.html
+++ b/index.html
@@ -170,21 +170,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> (My Love), <code>Java</code>, <code>HTML</code>/<code>CSS</code>/<code>Javascript</code>, <code>SQL</code> (Postgresql)
-                    <p>BY DAY: Professional programmer and web developer (...)</p>
-
+                <div class="col-lg-4 col-lg-offset-2" style="height: 100%">
+                    <p>BY DAY: Professional programmer and web developer working on anything from setting up and configuring our servers to front end development.</p>
+                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> <code>Java</code> <code>HTML</code>/<code>CSS</code>/<code>Javascript</code> <code>SQL</code> (Postgresql)
                 </div>
-                <p class="col-lg-4">
-                    BY NIGHT: You can find me learning and pushing code to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar fun activities.
-                    <p><i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>You can feel sore tomorrow or you can feel sorry tomorrow. You choose. - Anonymous</p>
+                <p class="col-lg-4" style="height: 100%">
+                    BY NIGHT: You can find me learning and pushing code (<a href="https://github.com/MFry" class="fa fa-github"></a>/<a href="https://www.hackerrank.com/mfry">HR</a>/<a href="http://www.freecodecamp.com/mfry">FCC</a>) to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar outings.
                 </p>
                 </div>
-                <!--<div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>-->
             </div>
         </div>
     </section>
@@ -263,9 +256,6 @@
                                 <a href="http://stackoverflow.com/users/1771644/michal-frystacky?tab=profile" class="btn-social btn-outline"><i class="fa fa-stack-overflow"></i></a>
                             </li>
                             <li>
-                                <a href="http://www.freecodecamp.com/mfry" class="btn-social btn-outline"><img src="img/fcc-app-icon.png"></a>
-                            </li>
-                            <li>
                                 <a href="https://www.linkedin.com/in/michalfrystacky" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
@@ -274,8 +264,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3><i class="fa fa-quote-left fa-2x fa-pull-left fa-border"></i></h3>
+                        <p>You can feel sore tomorrow or you can feel sorry tomorrow. You choose.</p><p style="padding-left:5em"> - Anonymous</p>
                     </div>
                 </div>
             </div>
