Rewrote about me section

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2" style="height: 100%">
-                    <p>BY DAY: Professional programmer and web developer working on anything from setting up and configuring our servers to front end development.</p>
-                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> <code>Java</code> <code>HTML</code>/<code>CSS</code>/<code>Javascript</code> <code>SQL</code> (Postgresql)
+                    <p>BY DAY: Professional programmer and web developer working on projects ranging from responsive and fast webpages to setting up and configuring local and virtual servers.</p>
+                    <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> <code>Java</code> <code>HTML</code>/<code>CSS</code>/<code>JS</code> <code>SQL</code>(Postgresql)
                 </div>
                 <p class="col-lg-4" style="height: 100%">
-                    BY NIGHT: You can find me learning and pushing code (<a href="https://github.com/MFry" class="fa fa-github"></a>/<a href="https://www.hackerrank.com/mfry">HR</a>/<a href="http://www.freecodecamp.com/mfry">FCC</a>) to expand my tech & math knowledge or you will find me outside ice/rock climbing, skiing, hiking, or similar outings.
+                    BY NIGHT: You can find me learning and pushing code (<a href="https://github.com/MFry" class="fa fa-github"></a>/<a href="https://www.hackerrank.com/mfry">HR</a>/<a href="http://www.freecodecamp.com/mfry">FCC</a>) or outside ice/rock/mixed climbing, skiing, hiking, or on a similar outings.
                 </p>
                 </div>
             </div>
