Aboutme link fix

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> <code>Java</code> <code>HTML</code>/<code>CSS</code>/<code>JS</code> <code>SQL</code>(Postgresql)
                 </div>
                 <p class="col-lg-4" style="height: 100%">
-                    BY NIGHT: You can find me learning and pushing code (<a href="https://github.com/MFry" class="fa fa-github"></a>/<a href="https://www.hackerrank.com/mfry">HR</a>/<a href="http://www.freecodecamp.com/mfry">FCC</a>) or outside ice/rock/mixed climbing, skiing, hiking, or on a similar outings.
+                    BY NIGHT: You can find me learning and pushing code (<a href="https://github.com/MFry" class="fa fa-github">Github</a>/<a href="https://www.hackerrank.com/mfry">HackerRank</a>/<a href="http://www.freecodecamp.com/mfry">FreeCodeCamp</a>) or outside ice/rock/mixed climbing, skiing, hiking, or on a similar outings.
                 </p>
                 </div>
             </div>
