--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2" style="height: 100%">
-                    <p>BY DAY: Professional programmer and web developer working on projects ranging from responsive and fast webpages to setting up and configuring local and virtual servers.</p>
+                    <p>Professional programmer and web developer working on projects ranging from building responsive, fast webpages to configuring local and virtual servers or writing scripts and programs to assist our staff.</p>
                     <p><i class="fa fa-code fa-3x fa-pull-left fa-border"></i><code>Python</code> <code>Java</code> <code>HTML</code>/<code>CSS</code>/<code>JS</code> <code>SQL</code>(Postgresql)
                 </div>
                 <p class="col-lg-4" style="height: 100%">
@@ -303,7 +303,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/lcdtv.svg" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -341,7 +341,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Server-side code written in Python to store a list of my favorite movies, including box art imagery and a movie trailer URL. This data is then served to a web page using HTML and CSS allowing visitors to review these movies and watch the trailers.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
